tests/errors/macro/macro_include_need_file_name/file_name_without_end_quote.c
#include "name.h	// требуется имя файла

int main()
{
	return 0;
}
